# smart-openrouter-router

./: .gitignore  .npmignore  CHANGELOG.md  CLI_COMMANDS.md  FULL_GUIDE.md  README.md  index.js  install.sh  package.json  pyproject.toml  smart-router-install.sh  smart_router.py  smart_router_common.py  test_install_flow.sh  test_router.sh  test_scenario_detection.py
.github/workflows/: release.yml
examples/node-express/: README.md  server.js
examples/python-basic/: README.md  app.py
legacy/: smart_router_start.sh  test_router.sh  zshrc_snippet.sh
smart_openrouter_router/: __init__.py  sdk.py
