[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-openrouter-router"
version = "0.6.0"
description = "Free-model-only OpenRouter smart routing proxy and helper CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Arun Narangali" }
]
keywords = ["openrouter", "router", "proxy", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/arunnarangali/smart-openrouter-router"
Repository = "https://github.com/arunnarangali/smart-openrouter-router"
Issues = "https://github.com/arunnarangali/smart-openrouter-router/issues"

[tool.setuptools]
py-modules = ["smart_router", "smart_router_common"]
script-files = ["bin/smart-router", "bin/claude-free", "bin/opencode-free"]

[tool.setuptools.packages.find]
where = ["."]
include = ["smart_openrouter_router*"]
